@@ -227,6 +227,8 @@
 	- python: retrofit sha1 digest using RPMTAG_SHA1RHN.
 	- python: change rhnUnload bindings.
 	- python: teach rhnLoad about RPMTAG_SHA1RHN as well.
+	- fix: Provides: /path did not work with added packages (#52183).
+	- fix: progress bar scaling did not include source rpm count.
 
 4.0 -> 4.0.[12]
 	- add doxygen and lclint annotations most everywhere.
